# spoonybard

./: .gitignore  .testr.conf  AUTHORS  Arch  ChangeLog  README.md  TODO.md  config.cfg.example  plan  requirements.txt  sandbox.py  setup.cfg  setup.py  test-requirements.txt  test_rsa.key  test_rsa.key.pub  tox.ini
examples/: local_jobs.py
spoonybard/: __init__.py
spoonybard/cmd/: server.py
spoonybard/core/: commands.py  engines.py  executors.py  factories.py  handlers.py  jobs.py  managers.py  ssh.py  triggers.py  webserver.py
spoonybard/plugins/: github.py
spoonybard/webhooks/: github.py
tests/: test_command.py  test_configmanager.py  test_executors.py  test_integration.py  test_jobs.py  test_pluginmanager.py  test_sshhandler.py  test_webserver.py
