[metadata]
name = spoonybard
summary = Simple CI System
author = Nicola Heald
author-email = nicola@notnowlewis.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    bard-server = spoonybard.cmd.server:main
